# runtime

./: Build.proj  Directory.Build.props  Directory.Build.targets  NuGet.config
.github/workflows/: backport.yml
docs/project/: list-of-diagnostics.md
docs/workflow/: using-docker.md
eng/: CodeAnalysis.src.globalconfig  Subsets.props  Version.Details.xml  Versions.props  install-native-dependencies.sh  liveILLink.targets  targetingpacks.targets  toolAot.targets
eng/common/cross/: build-rootfs.sh  toolchain.cmake
eng/formatting/: format.sh
eng/native/: configurecompiler.cmake  configureplatform.cmake  configuretools.cmake  functions.cmake  gen-buildsys.sh
eng/native/version/: copy_version_files.sh
eng/pipelines/: runtime.yml
eng/testing/: tests.wasm.targets
eng/testing/performance/: performance-setup.ps1  performance-setup.sh
src/coreclr/: CMakeLists.txt  Directory.Build.targets  clr.featuredefines.props  clrdefinitions.cmake  runtime-prereqs.proj  runtime.proj
src/coreclr/System.Private.CoreLib/: System.Private.CoreLib.csproj
src/coreclr/gc/: gc.cpp  gcee.cpp  gchandletable.cpp  gcsvr.cpp  gcwks.cpp  handletable.cpp  handletablecore.cpp  handletablescan.cpp  objecthandle.cpp
src/coreclr/gcinfo/: gcinfoencoder.cpp
src/coreclr/nativeaot/Bootstrap/base/: CMakeLists.txt
src/libraries/: Directory.Build.targets  externals.csproj  sendtohelixhelp.proj
src/mono/: CMakeLists.txt  Directory.Build.targets  mono.proj
src/tasks/: tasks.proj
src/tests/: Directory.Build.props  Directory.Build.targets  build.cmd  build.proj  build.sh
(+540 files in other folders)
